# talos_public_ws

./: Jacobianas_manos.txt  Jacobianas_sin_manos.txt  README  README.md  frames.gv
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/actions/: .catkin
devel/.private/aruco/: .catkin
devel/.private/aruco_msgs/: .catkin  setup.sh
devel/.private/aruco_ros/: .catkin
devel/.private/astronaut/: .catkin
devel/.private/astronaut_controllers/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/backward_ros/: .catkin  .rosinstall  local_setup.sh  setup.sh
logs/astronaut/: build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.034.log.stderr  build.make.079.log.stderr  build.make.080.log.stderr
logs/astronaut_controllers/: build.check.083.log.stderr  build.check.084.log.stderr  build.check.096.log.stderr  build.check.097.log.stderr  build.check.134.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.004.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.021.log.stderr  build.make.023.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.028.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.039.log.stderr  build.make.041.log.stderr  build.make.042.log.stderr  build.make.043.log.stderr  build.make.044.log.stderr  build.make.045.log.stderr  build.make.047.log.stderr  build.make.048.log.stderr  (+173 more)
logs/cartesian_compliance_controller/: build.cmake.001.log.stderr  build.make.000.log.stderr
logs/cartesian_force_controller/: build.make.000.log.stderr
logs/cartesian_motion_controller/: build.make.002.log.stderr
logs/controller_manager/: build.make.000.log.stderr
logs/direct_dynamic_controller/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/gazebo_plugins/: build.make.000.log.stderr  build.make.003.log.stderr
logs/gazebo_ros/: build.make.000.log.stderr  build.make.003.log.stderr
logs/gazebo_ros_control/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.003.log.stderr
logs/grasping_motion/: build.cmake.000.log.stderr
logs/hey5_description/: build.check.001.log.stderr
logs/pal_gazebo_plugins/: build.make.000.log.stderr
logs/pal_hardware_gazebo/: build.check.001.log.stderr
logs/simple_trajectory/: build.make.000.log.stderr
src/: .rosinstall  setup.sh
src/pal_transmissions/: CHANGELOG.rst  CMakeLists.txt  ros_control_plugins.xml
src/pal_transmissions/include/pal_transmissions/: half_differential_transmission.h  half_differential_transmission_loader.h  head_transmission.h  head_transmission_loader.h
src/pal_transmissions/src/: half_differential_transmission_loader.cpp  head_transmission_loader.cpp
src/pal_transmissions/test/: head_transmission_loader_test.cpp  head_transmission_test.cpp  loader_utils.h  read_file.h
src/pal_transmissions/test/urdf/: head_transmission_loader_full.urdf  head_transmission_loader_full_flipped.urdf  head_transmission_loader_invalid.urdf  head_transmission_loader_minimal.urdf
src/ros_controllers/direct_dynamic_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  ros_control_plugins.xml  talos.urdf
src/ros_controllers/direct_dynamic_controller/config/left_arm/: direct_dynamic_controller.yaml  motor_params.yaml  motor_params_simulation.yaml
src/ros_controllers/direct_dynamic_controller/config/left_leg/: direct_dynamic_controller.yaml  motor_params.yaml  motor_params_simulation.yaml
src/ros_controllers/direct_dynamic_controller/config/right_arm/: direct_dynamic_controller.yaml  motor_params.yaml  motor_params_simulation.yaml
src/ros_controllers/direct_dynamic_controller/config/right_leg/: direct_dynamic_controller.yaml  motor_params.yaml  motor_params_simulation.yaml
src/ros_controllers/direct_dynamic_controller/include/direct_dynamic_controller/: direct_dynamic_controller.h  direct_dynamic_controller_impl.h  hardware_interface_adapter.h  init_joint_trajectory.h  joint_trajectory_msg_utils.h  joint_trajectory_segment.h  tolerances.h
src/ros_controllers/direct_dynamic_controller/launch/: left_arm_direct_dynamic_controller.launch  left_leg_direct_dynamic_controller.launch  right_arm_direct_dynamic_controller.launch  right_leg_direct_dynamic_controller.launch
src/ros_controllers/direct_dynamic_controller/src/: direct_dynamic_controller.cpp
src/simple_trajectory/: CMakeLists.txt
src/talos_astronaut/pinocchio_dudas/: CMakeLists.txt  pinocchio_jacobiana.cc
src/talos_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt
(+5183 files in other folders)
